# vorarbeiter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-entrypoint.sh  flatpak.seccomp.json  justfile  manage.py  mypy.ini  pyproject.toml  pytest.ini  website-fix-build-id-links.patch
.github/: dependabot.yml  runs-on.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  large-arm64.yml  merge.yml  repro-check.yml  reprocheck.yml  runs-on.yml  runtime-cache.yml  runtimecache.yml  test-callback.yml  unprivileged.yml
alembic/: env.py
alembic/versions/: 0be7e58777c1_initial_schema.py  0ef2d79b649c_change_build_id_from_text_to_integer.py  110afa1d4e75_add_update_repo_job_id_to_pipeline.py  192d212c87d1_add_job_table.py  2056be49237c_add_publishing_status_to_pipeline.py  2b058eab246e_change_repro_pipeline_id_to_uuid.py  2d6423ed97db_merge_job_into_pipeline.py  32d2c744a1a0_merge_heads_for_publishing_state.py  362cb4cf2fda_replace_complete_with_succeeded_status.py  492c5c7ba9b4_add_repo_field_to_pipeline_model.py  4e5ef8b2fca8_add_is_extra_data_column_to_pipeline_.py  597b9981818d_add_flat_manager_repo_field_to_pipeline_.py  5bcc304afa74_add_total_cost_to_pipeline.py  694656b4a343_add_merge_request.py  (+18 more)
app/: __init__.py  config.py  database.py  logger.py  main.py  middleware.py  status_banner.py
examples/: pipeline_usage.py
pipelines/: admin.py  build_pipeline.py  models.py  services.py  tests.py  tests_build_pipeline.py  tests_command.py  urls.py  views.py
scripts/: cronjob.py  publish_pipelines.py
tests/: conftest.py  test_callback_validator.py  test_check_jobs_endpoint.py  test_check_jobs_missing_ids.py  test_dashboard.py  test_database.py  test_database_replica.py  test_diffoscope.py  test_diffoscope_routes.py  test_flat_manager.py  test_flat_manager_status_reporting.py  test_flat_manager_status_test_builds.py  test_github_actions_cancellation.py  test_github_actions_logs.py  test_github_actions_service.py  test_github_notifier.py  test_github_utils.py  test_job_model.py  test_job_monitor.py  test_job_monitor_fetch_ids.py  test_job_monitor_publication.py  test_job_monitor_test_pipelines.py  test_merge.py  test_models.py  test_pipeline_publication.py  test_pipeline_service.py  test_pipelines.py  test_pr_check_service.py  test_providers.py  test_publish_pipelines.py  test_publishing_service.py  test_reprocheck_callback.py  test_reprocheck_flat_manager_isolation.py  test_reprocheck_issue.py  test_reprocheck_notification.py  test_status_banner.py  test_webhooks.py
vorarbeiter/: asgi.py  settings.py  urls.py  wsgi.py
webhooks/: admin.py  models.py  tests.py  urls.py  views.py
(+61 files in other folders)
