[project]
name = "vorarbeiter"
version = "0.1.0"
description = "Build dispatcher for Flathub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "psycopg>=3.1.20",
    "psycopg-binary>=3.1.20",
    "psycopg-pool>=3.2.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.8.1",
    "sentry-sdk>=2.25.1",
    "sqlalchemy>=2.0.40",
    "structlog>=24.1.0",
    "granian>=2.7.4",
    "gql[requests]>=4.0.0,<5",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
    "pygobject>=3.56.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.12",
    "httpx>=0.28.1",
    "pytest-xdist>=3.8.0",
    "granian[reload]>=2.7.4",
    "ty>=0.0.32",
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
