[project]
name = "vorarbeiter"
version = "0.1.0"
description = "Build dispatcher for Flathub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "granian>=2.7.6",
    "gql[requests]>=4.0.0,<5",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
    "pygobject>=3.56.3",
    "httpxyz>=0.31.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "pytest-xdist>=3.8.0",
    "granian[reload]>=2.7.6",
    "ty>=0.0.51",
]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
